Fix search box alignment on Safari for iOS
Input element had extra padding that caused it to be off-center

--- a/styles/main.css
+++ b/styles/main.css
@@ -82,6 +82,7 @@ input {
   background-color: transparent;
   border-style: none;
   border-bottom: thin solid snow;
+  padding: 0 1px;
   color: snow;
   text-align: center;
   font-size: 20px;
